# video2webp

./: .gitignore  README.md  gui.py  requirements.txt  setup.cfg  setup.py  video2gif.spec
.github/workflows/: release.yml
icons/: logo800.icns
