[metadata]
name = video2webp
version = attr: video2webp.__version__
description = A GUI tool to convert videos to WEBP
long_description = file: README.md
long_description_content_type = text/markdown
author = woodchen
author_email = wood@czl.net
url = https://github.com/woodchen-ink/video2webp

[options]
packages = find:
python_requires = >=3.7
install_requires =
    ffmpeg-python>=0.2.0
    Pillow>=9.0.0
    tkinterdnd2>=0.3.0
